# CURSO_CPP_SERVICIOS_30H

./: Release.rar  include.rar
codigo/2_4_lib_crow_json_completo_V2/: crow_json.sln
codigo/4_2_comunicaciones_grpc/: comunicaciones_grpc.sln
codigo/7_1_DOCKER/mongo/: comprobaciones.txt  (+2 more)
codigo/7_1_DOCKER/servicio_empleados/servicio/: CMakeLists.txt  Dockerfile  vcpkg.json
codigo/7_1_DOCKER/servicio_empleados/servicio/src/: Empleado.hpp  EmpleadoCache.cpp  EmpleadoCache.hpp  EmpleadoRepository.cpp  EmpleadoRepository.hpp  EmpleadoService.cpp  EmpleadoService.hpp  MicroServicioCROW.cpp  MicroServicioCROW.hpp  main.cpp
codigo/7_2_K8S/: 4_Servicio_clusterIP_redis.txt  4_Servicio_clusterIP_redis_YAML.txt
codigo/base_datos/: base_datos.sln
codigo/boost_asio/: boost_asio.sln
codigo/crow/: crow.sln
codigo/docker/: soluciones_docker_containers_filtros.txt  soluciones_docker_volumenes.txt
codigo/json/: json.sln
codigo/seguridad/: seguridad.sln
codigo/solucion_docker/solucion_docker/practica4_crow/: CMakeLists.txt  CrowCRUD.cpp  CrowCRUD.h  main.cpp  vcpkg.json
codigo/websockets/: websockets.sln
codigo_DIC_2025/bases_de_datos/: bases_de_datos.sln
codigo_DIC_2025/boost_beast/: boost_beast.sln
codigo_DIC_2025/comunicaciones/: comunicaciones.sln  comunicaciones.vcxproj
codigo_DIC_2025/comunicaciones_grpc/: comunicaciones_grpc.sln  saludo.grpc.pb.cc  saludo.grpc.pb.h  saludo.pb.h  saludo.proto
codigo_DIC_2025/comunicaciones_zmq/: comunicaciones_zmq.sln
codigo_DIC_2025/crow_json/: crow_json.sln
codigo_DIC_2025/peticion_respuesta_cliente/: cliente.cpp  peticion_respuesta_cliente.vcxproj  peticion_respuesta_cliente.vcxproj.filters
codigo_DIC_2025/peticon_respuesta_server/: Persona.h  peticon_respuesta_server.vcxproj  peticon_respuesta_server.vcxproj.filters  servidor.cpp
codigo_DIC_2025/seguridad/: seguridad.sln
ejemplos/threads/: hilos1_vector.cpp
(+181 files in other folders)
